--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,17 @@ plugins {
     id 'maven-publish'
 }
 
-// Hard-coded version
-version = '1.0.0'
-
 group = 'org.enbd'
-archivesBaseName = 'streaming-app'
+version = '0.0.1'  // This is the version your pipeline reads
+
+repositories {
+    mavenCentral()
+}
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
-            groupId = 'org.enbd'
-            artifactId = 'streaming-app'
-            version = project.version  // uses the hard-coded version above
-        }
-    }
-    repositories {
-        maven {
-            name = "maven"
-            url = uri("http://localhost:8081/repository/maven-releases/")
-            credentials {
-                username = 'admin'        // replace with your Nexus user
-                password = 'admin123'     // replace with your Nexus password
-            }
         }
     }
 }
