--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,8 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'org.enbd'
-version = '0.0.1'  // This is the version your pipeline reads
-
-repositories {
-    mavenCentral()
-}
+group = 'com.example'
+version = '1.0.0'
 
 publishing {
     publications {
