--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,11 @@ buildscript {
 plugins {
     id "java"
     id "application"
-    id "project-report"
     id "maven-publish"
-    id "jacoco"
+    id "com.github.johnrengelman.shadow" version "7.1.2"
+}
+
+
 }
 
 apply plugin: "com.github.johnrengelman.shadow"
