--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,9 @@
-plugins {
-    id "java"
-    id "application"
-    id "maven-publish"
-    id "com.github.johnrengelman.shadow" version "8.1.1"
-}
-
-group = "com.example"
-version = "1.0.0"
-
 repositories {
+    mavenLocal()
     mavenCentral()
+    // Your Nexus repo if needed
 }
 
 dependencies {
-    implementation "org.apache.commons:commons-lang3:3.14.0"
-    testImplementation "junit:junit:4.13.2"
-}
-
-application {
-    mainClass = "com.example.Main"
-}
-
-tasks.register("prepareArtifacts") {
-    dependsOn shadowJar
-    doLast {
-        println "Artifacts prepared at: ${tasks.shadowJar.archiveFile.get().asFile}"
-    }
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
+    implementation 'org.enbd.common:rts:1.0.0'
 }
