--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,11 @@
+plugins {
+    id 'java'
+    id 'maven-publish'
+    id 'com.github.johnrengelman.shadow' version '7.1.2' // or compatible version
+}
+
+
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
