--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'groovy'
 }
 
 group = 'com.enbd.streaming'
@@ -14,12 +15,12 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.14.0'
-    testImplementation 'junit:junit:4.13.2'
     implementation localGroovy()
+    testImplementation 'junit:junit:4.13.2'
 }
 
 application {
-    mainClass = 'com.enbd.streaming.Main' // Optional placeholder
+    mainClass = 'com.enbd.streaming.Main' // placeholder
 }
 
 // Shadow JAR configuration
@@ -31,7 +32,7 @@ shadowJar {
     zip64 true
 }
 
-// Task to prepare artifacts (Shadow JAR + POM)
+// Task to prepare artifacts
 tasks.register('prepareArtifacts') {
     dependsOn shadowJar
     dependsOn publishToMavenLocal
@@ -54,9 +55,10 @@ publishing {
     }
 }
 
-// Run Groovy test script
-task runGroovyScript(type: JavaExec) {
-    mainClass.set('org.codehaus.groovy.tools.GroovyStarter')
-    classpath = sourceSets.main.runtimeClasspath
-    args = ['-cp', classpath.asPath, 'NexusRestTest.groovy']
+// **Run Groovy script using GroovyShell**
+task runGroovyScript {
+    doLast {
+        def shell = new GroovyShell()
+        shell.evaluate(new File("${projectDir}/NexusRestTest.groovy"))
+    }
 }
