--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 // Use version passed from RTS pipeline
-def appVversion = project.findProperty('appVersion') ?: '1.0.1'
+def appVersion = project.findProperty('appVersion') ?: '1.0.1'
 version = appVersion
 
 shadowJar {
