--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 // Use version passed from RTS pipeline
 //def appVersion = project.findProperty('appVersion') ?: '1.0.1'
-//verion = appVersion
+//verion = appV.ersion
 
 
 publishing {
